2019-1/230/users/4044/executions/1763_2103.log
== TEST (2019-05-22 21:42:20) 
-- CODE:
vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))

i = 0
while (i < size(vec_b)):
	vec_b[i] = vec_b[-1-i]
	i += 1
print(vec_b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vec_a = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:42:38) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))

i = 0
while (i < size(vec_b)):
	vec_b[i] = vec_b[-1-i]
	i += 1
print(vec_b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:45:42) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = vec_b

i = 0
while (i < size(vec_b)):
	vec_inv = vec_b[-1-i]
	i += 1
print(vec_inv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:46:09) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = vec_b

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1
print(vec_inv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:48:44) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1
print(vec_inv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:50:44) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1
print(vec_inv)

i = 0
while (i < size(vec_b)):
	if (vec_a[i] > vec_inv[i]):
		print(vec_a[i])
	elif (vec_a[i] < vec_inv[i]):
		print(vec_inv[i])
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:51:18) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1
print(vec_inv)

i = 0
while (i < size(vec_b)):
	if (vec_a[i] > vec_inv[i]):
		print(vec_a[i])
	elif (vec_a[i] < vec_inv[i]):
		print(vec_inv[i])
	i += 1
-- EXECUTION TIME:
0.487353
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
[10  8  6  4  2]
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
[ 17   2 100]
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
[19 17 13 11]
19
17
13
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:51:46) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1
print(vec_inv)

i = 0
while (i < size(vec_b)):
	if (vec_a[i] > vec_inv[i]):
		print(vec_a[i])
	elif (vec_a[i] < vec_inv[i]):
		print(vec_inv[i])
	i += 1
-- EXECUTION TIME:
0.493415
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
[10  8  6  4  2]
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
[ 17   2 100]
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
[19 17 13 11]
19
17
13
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:52:17) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1
print(vec_inv)

i = 0
while (i < size(vec_b)):
	if (vec_a[i] > vec_inv[i]):
		print(vec_a[i])
	elif (vec_a[i] < vec_inv[i]):
		print(vec_inv[i])
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:53:06) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1
print(vec_inv)

i = 0
while (i < size(vec_b)):
	if (vec_a[i] > vec_inv[i]):
		print(vec_a[i])
	elif (vec_a[i] < vec_inv[i]):
		print(vec_inv[i])
	i += 1
-- EXECUTION TIME:
0.587051
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
[10  8  6  4  2]
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
[ 17   2 100]
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
[19 17 13 11]
19
17
13
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:53:46) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1
print(vec_inv)

i = 0
while (i < size(vec_b)):
	if (vec_a[i] > vec_inv[i]):
		print(int(vec_a[i]))
	elif (vec_a[i] < vec_inv[i]):
		print(vec_inv[i])
	i += 1
-- EXECUTION TIME:
0.386781
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
[10  8  6  4  2]
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
[ 17   2 100]
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
[19 17 13 11]
19
17
13
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:54:01) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1
print(vec_inv)

i = 0
while (i < size(vec_b)):
	if (vec_a[i] > vec_inv[i]):
		print(vec_a[i])
	elif (vec_a[i] < vec_inv[i]):
		print(vec_inv[i])
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:54:40) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1
print(vec_inv)

i = 0
while (i < size(vec_b)):
	if (vec_a[i] > vec_inv[i]):
		print(vec_a[i])
	else:
		print(vec_inv[i])
	i += 1
-- EXECUTION TIME:
0.516801
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
[10  8  6  4  2]
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
[ 17   2 100]
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
[19 17 13 11]
19
17
13
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:54:50) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1
print(vec_inv)

i = 0
while (i < size(vec_b)):
	if (vec_a[i] > vec_inv[i]):
		print(vec_a[i])
	else:
		print(vec_inv[i])
	i += 1
-- EXECUTION TIME:
0.611005
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
[10  8  6  4  2]
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
[ 17   2 100]
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
[19 17 13 11]
19
17
13
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:21:10) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1

i = 0
while (i < size(vec_b)):
	if (vec_a[i] > vec_inv[i]):
		print(vec_a[i])
	else:
		print(vec_inv[i])
	i += 1
-- EXECUTION TIME:
0.420936
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
19
17
13
11
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:24:42) 
-- CODE:
from numpy import*

vec_a = array(eval(input("Digite os elementos do vetor A: ")))
vec_b = array(eval(input("Digite os elementos do vetor B: ")))
vec_inv = zeros(size(vec_b), dtype = int)

i = 0
while (i < size(vec_b)):
	vec_inv[i] = vec_b[-1-i]
	i += 1

i = 0
while (i < size(vec_b)):
	if (vec_a[i] > vec_inv[i]):
		print(vec_a[i])
	else:
		print(vec_inv[i])
	i += 1
-- EXECUTION TIME:
0.446309
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
19
17
13
11
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
